# hwfetch

./: Cargo.toml  README.md  default.nix  flake.nix  justfile  shell.nix
src/: main.rs  passwd.rs
src/logos/: arch.txt  linux.txt  nixos.txt
