[package]
name = "hwfetch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/hwfetch"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
owo-colors = "4.0.0"
rustix = { version = "0.38.34", features = ["system", "time", "thread", "process"] }
unicode-width = "=0.1.13"
