[package]
name = "hwfetch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/hwfetch"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
acumen = "0.0.2"
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
humansize = "2.1.3"
itertools = "0.13.0"
owo-colors = "4.1.0"
rustix = { version = "0.38.37", features = [
    "system",
    "time",
    "thread",
    "process",
] }
serde = { version = "1.0.210", features = ["derive"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
